apps/99-test/whoami/overlays/dev/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-custom-header
  namespace: whoami
spec:
  headers:
    customResponseHeaders:
      X-Vixens-Version: "trunk-based-test"
