apps/99-test/whoami/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-redirect-https@kubernetescrd, whoami-whoami-custom-header@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: whoami.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: http
  tls:
    - hosts:
        - whoami.dev.truxonline.com
      secretName: whoami-tls
